Fix example safe area on iOS

--- a/examples/css/example.css
+++ b/examples/css/example.css
@@ -11,9 +11,14 @@ body {
 @supports(padding: max(0px)) {
     body {
         padding-top: max(0px, env(safe-area-inset-top));
-        padding-right: max(0px, env(safe-area-inset-right));
         padding-bottom: max(0px, env(safe-area-inset-bottom));
-        padding-left: max(0px, env(safe-area-inset-left));
+    }
+
+    @media (display-mode: standalone) {
+        body {
+            padding-left: max(0px, env(safe-area-inset-left));
+            padding-right: max(0px, env(safe-area-inset-right));
+        }
     }
 }
 
